--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
   - python: "3.7-dev"
 cache: pip
 install:
-- pip install websocket_client
+- pip install websocket-client
 script:
 - export PAGER=cat
 - ./dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
