--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ matrix:
   - python: "3.7-dev"
 cache: pip
 install:
+- pip install pydiatra pyflakes
 - pip install websocket-client
 script:
+- python3 -m pydiatra .
+- python3 -m pyflakes .
 - export PAGER=cat
 - ./dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
 
