--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,12 @@ cache: pip
 install:
 - pip install websocket-client
 - pip install pydiatra pyflakes
+- pip install restructuredtext-lint pygments
 script:
 - export PAGER=cat
 - ./dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
 - python3 -m pydiatra .
 - python3 -m pyflakes .
+- restructuredtext-lint --encoding=UTF-8 README
 
 # vim:ts=2 sts=2 sw=2 et
