--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ python:
 - "3.7-dev"
 cache: pip
 install:
-- pip install websocket-client
-- pip install pydiatra pyflakes
-- pip install restructuredtext-lint pygments
+- python3 -m pip install websocket-client
+- python3 -m pip install pydiatra pyflakes
+- python3 -m pip install restructuredtext-lint pygments
 script:
 - export PAGER=cat
 - ./dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
