--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,15 @@ jobs:
         shellcheck t/*.t
     - name: run pydiatra
       run: |
-        python3 -m pip install --user pydiatra
+        python3 -m pip install pydiatra
         python3 -m pydiatra -v .
     - name: run pyflakes
       run: |
-        python3 -m pip install --user pyflakes
+        python3 -m pip install pyflakes
         python3 -m pyflakes .
     - name: check README syntax
       run: |
-        python3 -m pip install --user restructuredtext-lint pygments
+        python3 -m pip install restructuredtext-lint pygments
         rst-lint --level=info --encoding=UTF-8 README
 
 # vim:ts=2 sts=2 sw=2 et
